# semex

./: .travis.yml  CMakeLists.txt  README.md
CMakeExternals/: External_ITK.cmake  External_SlicerExecutionModel.cmake
TheLib/: CMakeLists.txt  TheLibConfig.cmake.in  UseTheLib.cmake.in
TheLib/doc/: Doxyfile.doxy  MainPage.dox  Modules.dox
TheLib/include/: ApplyMaskImageFilter.h  ApplyMaskImageFilterParallel.h  CommandObserver.h  NewImageIO.h  NewImageIOFactory.h
TheLib/src/: ApplyMaskImageFilter.cpp  ApplyMaskImageFilterParallel.cpp  NewImageIO.cpp  NewImageIOFactory.cpp
TheLib/tests/: ApplyMaskImageFilterParallelTests.cpp  ApplyMaskImageFilterTests.cpp  CMakeLists.txt  NewImageIOTests.cpp
TheLib/tests/data/: MRHead-label.mhd  MRHead.mhd  MRHead.new  readme.txt
TheLibApps/: CMakeLists.txt
TheLibApps/src/HelloImage/: CMakeLists.txt  HelloImage.cxx  HelloImage.xml
TheLibApps/src/HelloMask/: CMakeLists.txt  HelloMask.cxx  HelloMask.xml
TheLibApps/src/HelloWorld/: CMakeLists.txt  HelloWorld.cxx  HelloWorld.xml
